--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "subventech-app",
   "private": true,
-  "version": "0.1.0",
-  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3000",
     "lint": "next lint",
     "test": "playwright test",
-    "test:a11y": "playwright test -g a11y"
+    "test:install": "playwright install --with-deps"
   },
   "dependencies": {
     "next": "15.5.0",
@@ -17,15 +15,8 @@
     "react-dom": "18.3.1"
   },
   "devDependencies": {
-    "@axe-core/playwright": "^4.9.0",
-    "@playwright/test": "^1.47.0",
-    "@types/node": "^20.12.12",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^9.9.0",
-    "postcss": "^8.4.41",
-    "tailwindcss": "^3.4.10",
-    "typescript": "^5.5.4"
+    "@axe-core/playwright": "4.10.0",
+    "@playwright/test": "1.47.2",
+    "typescript": "5.6.2"
   }
 }
