--- a/package.json
+++ b/package.json
@@ -1,22 +1,6 @@
-{
-  "name": "subventech-app",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start -p 3000",
-    "lint": "next lint",
-    "test": "playwright test",
-    "test:install": "playwright install --with-deps"
-  },
-  "dependencies": {
-    "next": "15.5.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
-  "devDependencies": {
-    "@axe-core/playwright": "4.10.0",
-    "@playwright/test": "1.47.2",
-    "typescript": "5.6.2"
-  }
+"scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "test": "playwright test"
 }
