--- a/.github/workflows/a11y.yml
+++ b/.github/workflows/a11y.yml
@@ -15,11 +15,22 @@ jobs:
         with:
           node-version: 18
 
+      # Installe les deps du projet
       - name: Install dependencies
         run: npm ci || npm install --legacy-peer-deps
 
-      - name: Install Playwright browsers (with system deps)
+      # ➜ Ajout IMPORTANT : installe TypeScript + types manquants
+      - name: Install TypeScript types (react/node)
+        run: npm install -D typescript @types/react @types/node --no-audit --no-fund
+
+      # Build avant les tests
+      - name: Build Next.js
+        run: npm run build
+
+      # Installe les navigateurs Playwright
+      - name: Install Playwright browsers
         run: npx playwright install --with-deps
 
+      # Lance les tests Playwright
       - name: Run tests
         run: npm run test
